# rabbitmq-prototype

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: models.py
app/management/commands/: consumer.py
app/migrations/: 0001_initial.py
app/utils/: consumer.py
prototype/: settings.py
