[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Eric"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.0"
python-decouple = "^3.8"
amqp = "^5.2.0"
psycopg2-binary = "^2.9.9"
ipdb = "^0.13.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
